2017-11-17  Chris Dumez  <cdumez@apple.com>

        [Service Workers] Implement "Notify Controller Change" algorithm
        https://bugs.webkit.org/show_bug.cgi?id=179822

        Reviewed by Youenn Fablet.

        Add layout test coverage.

        * http/tests/workers/service/controller-change-expected.txt: Added.
        * http/tests/workers/service/controller-change.html: Added.

2017-11-17  Joseph Pecoraro  <pecoraro@apple.com>

        Web Inspector: Fix grammar typo in tests
        https://bugs.webkit.org/show_bug.cgi?id=179852

        Reviewed by Matt Baker.

        * http/tests/inspector/network/resource-response-source-memory-cache-expected.txt:
        * http/tests/inspector/network/resource-response-source-memory-cache-revalidate-expired-only-expected.txt:
        * http/tests/inspector/network/resource-response-source-memory-cache-revalidate-expired-only.html:
        * http/tests/inspector/network/resource-response-source-memory-cache.html:
        * http/tests/inspector/network/set-resource-caching-disabled-memory-cache-expected.txt:
        * http/tests/inspector/network/set-resource-caching-disabled-memory-cache.html:

2017-11-17  John Wilander  <wilander@apple.com>

        Storage Access API: UI process should update network process about granted access
        https://bugs.webkit.org/show_bug.cgi?id=176943
        <rdar://problem/34440612>

        Reviewed by Alex Christensen.

        * http/tests/storageAccess/request-and-grant-storage-access-cross-origin-sandboxed-iframe-from-prevalent-domain-with-non-recent-user-interaction-expected.txt: Added.
        * http/tests/storageAccess/request-and-grant-storage-access-cross-origin-sandboxed-iframe-from-prevalent-domain-with-non-recent-user-interaction.html: Added.
        * http/tests/storageAccess/request-and-grant-storage-access-cross-origin-sandboxed-iframe-from-prevalent-domain-with-recent-user-interaction-expected.txt: Added.